# SquareEquationSolver

./: CMakeLists.txt  README.md  argument_parser.h  build.sh  build_and_test.sh  equation_issue.h  equation_solution.h  solution_printer.h  solver.h  solver_test.cpp
src/: argument_parser.h  equation_issue.h  equation_solution.h  main.cpp  producer_consumer_pipe.h  solution_printer.h  solver.h
test/: solver_test.cpp
